# svl

./: LICENSE  README.md  asb.py  crossfile  linker.ld  meson.build  meson_options.txt
include/: svl_packet.h  svl_ringbuf.h  svl_uart.h  svl_utils.h
src/: main.S  main.c  svl_packet.c  svl_ringbuf.c  svl_uart.c  svl_utils.c
